--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,8 @@ button {
   background-color: azure;
   border: 1px solid aquamarine;
 }
+
+.winner {
+  background-color: burlywood;
+  color: palevioletred;
+}
