--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  max-width: 303px;
 }
 
 .header {
   display: flex;
+  flex-flow: row;
+  background-color: darkkhaki;
+  align-items: center;
+  padding: 5px;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 button {
