--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,9 @@ button {
   background-color: #ccffc9;
   color: palevioletred;
 }
+
+.footer {
+  padding: 10px;
+  margin-top: 10px;
+  background: #efeee1;
+}
