--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,12 @@
 .App {
   font-family: sans-serif;
   text-align: center;
-  max-width: 303px;
-}
-
-.header {
   display: flex;
-  flex-flow: row;
-  background-color: darkkhaki;
+  flex-flow: column;
   align-items: center;
-  padding: 5px;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-button {
-  padding: 10px;
-  width: 100px;
-  height: 40px;
-  margin-left: 20px;
-  background-color: azure;
-  border: 1px solid aquamarine;
+  justify-content: center;
+  height: 100vh;
+  background-color: rgba(211, 232, 233, 0.44);
 }
 
 .winner, .winner:hover {
@@ -32,4 +18,5 @@ button {
   padding: 10px;
   margin-top: 10px;
   background: #efeee1;
+  width: 292px;
 }
