--- a/src/components/cell.module.css
+++ b/src/components/cell.module.css
@@ -1,3 +1,5 @@
+@import '../vars.css';
+
 .cell {
   height: 100px;
   width: 100px;
@@ -6,18 +8,19 @@
   align-items: center;
   justify-content: center;
   font-size: 45px;
+  text-transform: uppercase;
 }
 .cell:nth-child(2) {
-  border-left: 1px solid black;
+  border-left: 1px solid var(--color-black);
 }
 .cell:last-child {
-  border-left: 1px solid black;
+  border-left: 1px solid var(--color-black);
 }
 .cell:hover {
-  background-color: #e5ecf4;
+  background-color: var(--cell-hover);
 }
 
 .winner, .winner:hover {
-  background-color: #ccffc9;
-  color: palevioletred;
+  background-color: var(--winner-cell-background);
+  color: var(--winner-cell-font-colour);
 }
