--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,6 +1,11 @@
+@import '../vars.css';
+
 .footer {
-  padding: 10px;
-  margin-top: 10px;
-  background: darkkhaki;
-  width: 292px;
+  padding: 5px;
+  margin: 10px 0 0 0;
+  background: var(--header-footer-background);
+  width: calc(100% - 10px);
+}
+.link {
+  color: var(--link-colour);
 }
