--- a/src/components/grid.module.css
+++ b/src/components/grid.module.css
@@ -1,6 +1,8 @@
+@import '../vars.css';
+
 .row {
   display: flex;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--color-black);
   max-width: 302px;
 }
 .row:last-child {
