--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,19 +1,24 @@
+@import '../vars.css';
+
 .header {
   display: flex;
   flex-flow: row;
-  background-color: darkkhaki;
+  background-color: var(--header-footer-background);
   align-items: center;
   padding: 5px;
   justify-content: space-between;
-  margin-bottom: 10px;
-  width: 292px
+  margin: 0 0 10px 0;
+  width: calc(100% - 10px);
 }
 
 .button {
   padding: 10px;
   width: 100px;
-  height: 40px;
-  margin-left: 20px;
-  background-color: azure;
-  border: 1px solid aquamarine;
+  background-color: var(--link-colour);
+  border: 1px solid var(--link-colour);
+}
+
+.note {
+  color: var(--note-colour);
+  font-weight: bold;
 }
