--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -16,6 +16,7 @@
   width: 100px;
   background-color: var(--link-colour);
   border: 1px solid var(--link-colour);
+  font-size: 16px;
 }
 
 .note {
