--- a/src/components/cell.module.css
+++ b/src/components/cell.module.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 45px;
+  font-size: 3.5rem;
   text-transform: uppercase;
 }
 .cell:nth-child(2) {
