--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -5,6 +5,7 @@
   margin: 10px 0 0 0;
   background: var(--header-footer-background);
   width: calc(100% - 10px);
+  font-size: 1rem;
 }
 .link {
   color: var(--link-colour);
