--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -11,12 +11,17 @@
   width: calc(100% - 10px);
 }
 
+.header p {
+  font-size: 1rem;
+  color: var(--color-black);
+}
+
 .button {
   padding: 10px;
   width: 100px;
   background-color: var(--link-colour);
   border: 1px solid var(--link-colour);
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .note {
